--- a/scss/components/_verification.scss
+++ b/scss/components/_verification.scss
@@ -4,6 +4,7 @@
 
     &__wrap {
         margin-top: 50px;
+        margin-bottom: 50px;
 
         .container {
             display: flex;
@@ -46,6 +47,22 @@
     &__form {
         box-sizing: border-box;
 
+        .info {
+            margin-top: -20px;
+
+            span {
+                font-size: 12px;
+                color: $black;
+                line-height: 1;
+                font-weight: 400;
+
+                a {
+                    color: $accent;
+                    text-decoration: none;
+                }
+            }
+        }
+
         form {
             width: 100%;
             box-sizing: border-box;
@@ -66,20 +83,27 @@
                 font-size: 14px;
                 margin-bottom: 4px;
                 line-height: 1.4;
+
+                &.custom-label {
+                    margin-bottom: -20px;
+                }
             }
 
             label {
                 width: 100%;
                 position: relative;
+
                 i {
                     position: absolute;
                     right: 15px;
-                    top: calc(50% +  2px);
+                    top: calc(50% + 2px);
+
                     svg {
                         width: 13px;
                         height: 16px;
                     }
                 }
+
                 &.req {
                     &::after {
                         content: '*';
@@ -102,41 +126,142 @@
                 input {
                     width: 100%;
                     box-sizing: border-box;
-                }
-
-                input {
                     padding: 15px;
                     box-sizing: border-box;
                     border: none;
                     border-radius: 8px;
                     background-color: $gray;
+                    &.error {
+                        border: 1px solid $accent;
+                    }
                 }
+
+            }
+        }
+
+        .action {
+            width: 100%;
+            box-sizing: border-box;
+            display: flex;
+            gap: 10px;
+
+            button {
+                width: 100%;
+                padding: 11px 20px;
+                box-sizing: border-box;
+                border: 1px solid $accent;
+                border-radius: 4px;
+
+                &.back {
+                    max-width: 132px;
+                    color: $black;
+                    background-color: #fff;
+                }
+
+
+            }
+
+            button[type=submit] {
+                color: #fff;
+                background-color: $accent;
+
             }
         }
     }
 }
 
-.container {}
+.check-label {
+    box-sizing: border-box;
+    padding: 13px 25px;
+    background-color: $gray;
+    border-radius: 6px;
+    cursor: pointer;
+
+    .checkbox {
+        .checkbox-item {
+            width: 42px;
+            height: 20px;
+            border-radius: 20px;
+            background-color: #484134;
+            position: relative;
+            transition: .5s ease;
+
+            input {
+                position: absolute;
+                left: 0;
+                top: 0;
+                opacity: 0;
+            }
+
+            &::before {
+                content: '';
+                position: absolute;
+                left: 3px;
+                top: 2.5px;
+                width: 15px;
+                height: 15px;
+                background-color: #fff;
+                border-radius: 50%;
+                transition: .35s ease;
+            }
+
+            &.active {
+                background-color: $accent;
+
+                &::before {
+                    top: 2.5px;
+                    left: calc(100% - 3px - 15px);
+                }
+            }
+        }
+
+        pointer-events: all;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
 
 
-.req {}
+        .item {
+            display: flex;
+            align-items: center;
 
-.label-name {}
+            img {
+                display: block;
+                width: 26px;
+                height: 26px;
+                box-sizing: border-box;
+                margin-right: 10px;
+            }
 
-.half {}
+            span {
+                font-weight: 400;
+                font-size: 16px;
+                color: $black;
+            }
+        }
+    }
 
-.check-label {}
 
-.checkbox {}
 
-.item {}
+}
 
-.checkbox-item {}
+.profile-social-wrap {
+    box-sizing: border-box;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-bottom: -20px;
 
-.decor {}
+    +p {
+        font-size: 14px;
+        font-weight: 400;
+        display: block;
+        margin: 0;
 
-.action {}
-
-.back {}
-
-.info {}
+        a {
+            color: $accent;
+            text-decoration: none;
+        }
+    }
+}
