--- a/scss/components/_verification.scss
+++ b/scss/components/_verification.scss
@@ -135,6 +135,10 @@
                         border: 1px solid $accent;
                     }
                 }
+                .iti {
+                    width: 100%;
+                    box-sizing: border-box;
+                }
 
             }
         }
