--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -35,6 +35,7 @@ body {
     border: none;
     transition: .35s ease;
     cursor: pointer;
+
     &:hover {
         background-color: $accent2;
     }
@@ -75,4 +76,41 @@ body {
             }
         }
     }
+}
+
+.menu-btn {
+    width: 50px;
+    height: 50px;
+    display: block;
+    position: relative;
+    background-color: $gray;
+    border-radius: 8px;
+    span {
+        width: 24px;
+        height: 2px;
+        background-color: $gray2;
+        top: calc(50% - 1PX);
+        position: absolute;
+        left: 15px;
+    }
+
+    &::before {
+        content: '';
+        width: 24px;
+        height: 2px;
+        background-color: $gray2;
+        top: 18px;
+        position: absolute;
+        left: 15px;
+    }
+    &::after {
+        content: '';
+        width: 24px;
+        height: 2px;
+        background-color: $gray2;
+        bottom: 18px;
+        position: absolute;
+        left: 15px;
+    }
+
 }
