--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -221,10 +221,71 @@
 	}
 }
 
-.container {}
+@media(max-width:1200px) {
+	.header {
+		&__search {
+			form {
+				input {
+					padding-left: 0;
+				}
+			}
+		}
+		&__body {
+			gap: 15px;
+		}
+		&__profile-item {
+			margin-right: 0;
+		}
+	}
+}
 
-.header-favorite {}
+@media(max-width:980px) {
+	.header {
+		&__nav{
+			display: none;
+		}
+		&__title {
+			margin-right: auto;
+		}
+	}
+}
 
-.fav-count {}
+@media(max-width:620px) {
+	.header {
+		&__search {
+			display: none;
+		}
+		.header-mobile-btn {
+			order: 10;
+		}
+		&__profile {
+			order: 9;
+			
+		}
+		&__profile-item {
+			padding-right: 0;
+			&::after {
+				display: none;
+			}
+			span {
+				display: none;
+			}
+			img {
+				margin-right: 0;
+			}
+		}
+		&__actions {
+			a {
+				width: 40px;
+				height: 40px;
+				margin-right: 14px;
+				padding: 0;
+				img {
+					width: 16px;
+					height: 16px;
+				}
+			}
 
-.header-cart {}
+		}
+	}
+}
