--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -114,3 +114,12 @@ body {
     }
 
 }
+
+.section-title {
+    margin: 0;
+    display: block;
+    font-weight: 600;
+    font-size: 22px;
+    color: $black;
+    line-height: 1.4;
+}
