--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -13,7 +13,7 @@
     box-sizing: border-box;
     background-image: url(../../assets/imgs/invite-hero.png);
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: cover;
 
     // .hero__text
 
