--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,6 +11,8 @@
 
 @import 'components/verification';
 
+@import 'components/invite-page';
+
 @import 'components/hero';
 
 @import 'components/footer';
