--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -420,6 +420,15 @@ body {
   left: 15px;
 }
 
+.section-title {
+  margin: 0;
+  display: block;
+  font-weight: 600;
+  font-size: 22px;
+  color: #212121;
+  line-height: 1.4;
+}
+
 .header {
   padding: 10px 0;
   -webkit-box-sizing: border-box;
@@ -989,6 +998,187 @@ body {
     margin: 0;
   }
 }
+.invite-calc {
+  padding: 50px 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+.invite-calc__wrap {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 60px 40px;
+  border: 1px solid #D6D2D2;
+  background-color: #fff;
+  border-radius: 10px;
+}
+.invite-calc__wrap .section-title {
+  margin-bottom: 50px;
+}
+.invite-calc__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  gap: 40px;
+}
+.invite-calc__calc-wrap .invite-calc__info {
+  display: block;
+  margin-top: 15px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  color: #A4A0A0;
+  font-size: 14px;
+}
+.invite-calc__calc-wrap .invite-calc__info span {
+  color: #FC7361;
+}
+.invite-calc__calc {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 770px;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  gap: 14px;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+.invite-calc__calc .action {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+.invite-calc__calc .action button {
+  margin-top: auto;
+  height: calc(100% - 20px);
+}
+.invite-calc__calc label {
+  max-width: 320px;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  position: relative;
+}
+.invite-calc__calc label span {
+  display: block;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.4;
+  color: #A4A0A0;
+  margin-bottom: 4px;
+}
+.invite-calc__calc label input {
+  width: 100%;
+  background-color: #F9F9F9;
+  border: none;
+  padding: 15px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: block;
+  color: #212121;
+  font-weight: 400;
+  line-height: 1.2;
+}
+.invite-calc__calc label i {
+  position: absolute;
+  right: 15px;
+  bottom: 20px;
+  height: 15px;
+}
+.invite-calc__calc label i svg {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.invite-calc__result {
+  max-width: 380px;
+  width: 30%;
+}
+.invite-calc__result > span {
+  font-size: 14px;
+  color: #212121;
+  display: block;
+  margin-bottom: 4px;
+}
+.invite-calc__total {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  background-color: #F9F9F9;
+  padding: 15px;
+  font-size: 16px;
+  color: #212121;
+  line-height: 1.2;
+  text-align: center;
+}
+.invite-calc__total span {
+  color: #FC7361;
+  margin-right: 10px;
+}
+
+.invite-launch {
+  padding: 50px 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+.invite-launch__title {
+  margin-bottom: 40px;
+  display: block;
+}
+.invite-launch__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  margin: 0 -20px -10px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+.invite-launch__items .item {
+  width: calc(33.33% - 20px);
+  margin: 0 10px 10px;
+  border: 1px solid #D6D2D2;
+  background-color: #fff;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 10px;
+  padding: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+.invite-launch__items .item .num {
+  font-size: 66px;
+  padding: 0 14px;
+  line-height: 1.4;
+  color: #212121;
+  background-color: #F9F9F9;
+  color: #FC7361;
+  margin-right: 20px;
+  border-radius: 10px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 .invite-hero {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -1001,7 +1191,7 @@ body {
           box-sizing: border-box;
   background-image: url(../../assets/imgs/invite-hero.png);
   background-repeat: no-repeat;
-  background-size: auto;
+  background-size: cover;
 }
 .hero__text {
   display: -webkit-box;
