--- a/scss/components/_invite-page.scss
+++ b/scss/components/_invite-page.scss
@@ -1,194 +1,567 @@
 .invite-calc {
-    padding: 50px 0;
+  padding: 50px 0;
+  box-sizing: border-box;
+  // .invite-calc__wrap
+
+  &__wrap {
     box-sizing: border-box;
-    // .invite-calc__wrap
+    padding: 60px 40px;
+    border: 1px solid #d6d2d2;
+    background-color: $white;
+    border-radius: 10px;
 
-    &__wrap {
-        box-sizing: border-box;
-        padding: 60px 40px;
-        border: 1px solid #D6D2D2;
-        background-color: $white;
-        border-radius: 10px;
+    .section-title {
+      margin-bottom: 50px;
+    }
+  }
 
-        .section-title {
-            margin-bottom: 50px;
-        }
+  // .invite-calc__row
+
+  &__row {
+    display: flex;
+    align-items: stretch;
+    gap: 40px;
+  }
+
+  // .invite-calc__calc-wrap
+
+  &__calc-wrap {
+    .invite-calc__info {
+      display: block;
+      margin-top: 15px;
+      box-sizing: border-box;
+      color: $gray2;
+      font-size: 14px;
+
+      span {
+        color: $accent;
+      }
+    }
+  }
+
+  // .invite-calc__calc
+
+  &__calc {
+    display: flex;
+    max-width: 770px;
+    width: 100%;
+    box-sizing: border-box;
+    gap: 14px;
+    align-items: stretch;
+
+    .action {
+      display: flex;
+      align-items: flex-end;
+
+      button {
+        margin-top: auto;
+        height: calc(100% - 20px);
+      }
     }
 
-    // .invite-calc__row
+    label {
+      max-width: 320px;
+      width: 100%;
+      box-sizing: border-box;
 
-    &__row {
-        display: flex;
-        align-items: stretch;
-        gap: 40px;
-    }
+      span {
+        display: block;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 1.4;
+        color: $gray2;
+        margin-bottom: 4px;
+      }
 
-    // .invite-calc__calc-wrap
-
-    &__calc-wrap {
-        .invite-calc__info {
-            display: block;
-            margin-top: 15px;
-            box-sizing: border-box;
-            color: $gray2;
-            font-size: 14px;
-
-            span {
-                color: $accent;
-            }
-        }
-    }
-
-    // .invite-calc__calc
-
-    &__calc {
-        display: flex;
-        max-width: 770px;
-        width: 100%;
-        box-sizing: border-box;
-        gap: 14px;
-        align-items: stretch;
-
-        .action {
-            display: flex;
-            align-items: flex-end;
-
-            button {
-                margin-top: auto;
-                height: calc(100% - 20px);
-            }
-        }
-
-        label {
-            max-width: 320px;
-            width: 100%;
-            box-sizing: border-box;
-
-            span {
-                display: block;
-                font-weight: 400;
-                font-size: 14px;
-                line-height: 1.4;
-                color: $gray2;
-                margin-bottom: 4px;
-            }
-
-            input {
-                width: 100%;
-                background-color: $gray;
-                border: none;
-                padding: 15px;
-                box-sizing: border-box;
-                display: block;
-                color: $black;
-                font-weight: 400;
-                line-height: 1.2;
-            }
-
-            i {
-                position: absolute;
-                right: 15px;
-                bottom: 20px;
-                height: 15px;
-
-                svg {
-                    display: block;
-                    width: 100%;
-                    height: 100%;
-                }
-            }
-
-            position: relative;
-        }
-    }
-
-    // .invite-calc__info
-
-    &__info {}
-
-    // .invite-calc__result
-
-    &__result {
-        max-width: 380px;
-        width: 30%;
-
-        >span {
-            font-size: 14px;
-            color: $black;
-            display: block;
-            margin-bottom: 4px;
-        }
-    }
-
-    // .invite-calc__total
-
-    &__total {
-        display: flex;
-        align-items: center;
-        justify-content: center;
+      input {
         width: 100%;
         background-color: $gray;
+        border: none;
         padding: 15px;
-        font-size: 16px;
+        box-sizing: border-box;
+        display: block;
         color: $black;
+        font-weight: 400;
         line-height: 1.2;
-        text-align: center;
+      }
 
-        span {
-            color: $accent;
-            margin-right: 10px;
+      i {
+        position: absolute;
+        right: 15px;
+        bottom: 20px;
+        height: 15px;
+
+        svg {
+          display: block;
+          width: 100%;
+          height: 100%;
         }
+      }
+
+      position: relative;
     }
+  }
+
+  // .invite-calc__info
+
+  &__info {
+  }
+
+  // .invite-calc__result
+
+  &__result {
+    max-width: 380px;
+    width: 30%;
+
+    > span {
+      font-size: 14px;
+      color: $black;
+      display: block;
+      margin-bottom: 4px;
+    }
+  }
+
+  // .invite-calc__total
+
+  &__total {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    background-color: $gray;
+    padding: 15px;
+    font-size: 16px;
+    color: $black;
+    line-height: 1.2;
+    text-align: center;
+
+    span {
+      color: $accent;
+      margin-right: 10px;
+    }
+  }
 }
 
 .invite-launch {
-    padding: 50px 0;
+  padding: 50px 0;
+  box-sizing: border-box;
+  // .invite-launch__title
+
+  &__title {
+    margin-bottom: 40px;
+    display: block;
+  }
+
+  // .invite-launch__items
+
+  &__items {
+    display: flex;
+    align-items: stretch;
+    margin: 0 -20px -10px;
     box-sizing: border-box;
-    // .invite-launch__title
-
-    &__title {
-        margin-bottom: 40px;
-        display: block;
-    }
-
-    // .invite-launch__items
-
-    &__items {
-        display: flex;
-        align-items: stretch;
-        margin: 0 -20px -10px;
+    .item {
+      width: calc(33.33% - 20px);
+      margin: 0 10px 10px;
+      border: 1px solid #d6d2d2;
+      background-color: #fff;
+      box-sizing: border-box;
+      border-radius: 10px;
+      padding: 30px;
+      display: flex;
+      align-items: flex-start;
+      .num {
+        font-size: 66px;
+        padding: 0 14px;
+        line-height: 1.4;
+        color: $black;
+        background-color: $gray;
+        color: $accent;
+        margin-right: 20px;
+        border-radius: 10px;
         box-sizing: border-box;
-        .item {
-            width: calc(33.33% - 20px);
-            margin: 0 10px 10px;
-            border: 1px solid #D6D2D2;
-            background-color: #fff;
-            box-sizing: border-box;
-            border-radius: 10px;
-            padding: 30px;
-            display: flex;
-            align-items: flex-start;
-            .num {
-                font-size: 66px;
-                padding: 0 14px;
-                line-height: 1.4;
-                color: $black;
-                background-color: $gray;
-                color: $accent;
-                margin-right: 20px;
-                border-radius: 10px;
-                box-sizing: border-box;
-            }
+      }
+      .text {
+        h3 {
+          margin: 0;
+          display: block;
+          font-size: 22px;
+          font-weight: 600;
+          line-height: 1.2;
+          color: $black;
+          margin-bottom: 20px;
         }
+        p {
+          margin: 0;
+          color: $black;
+          font-weight: 400;
+          line-height: 1.4;
+          display: block;
+          margin-bottom: 20px;
+        }
+        a {
+          display: block;
+          width: fit-content;
+          color: $gray2;
+          font-size: 14px;
+          font-weight: 400;
+          padding-bottom: 2px;
+          border-bottom: 1px dotted $gray2;
+          line-height: 1.4;
+          text-decoration: none;
+        }
+      }
     }
+  }
 }
 
-.container {}
+.invite-power {
+  // .invite-power__items
 
-.section-title {}
+  &__items {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+    box-sizing: border-box;
+    margin: 0 -10px;
+    .item {
+      width: calc(100% / 3 - 20px);
+      margin: 0 10px 20px;
+      display: flex;
+      align-items: flex-start;
+      box-sizing: border-box;
+      padding: 30px;
+      background-color: #fff;
+      border: 1px solid #d6d2d2;
+      border-radius: 8px;
+      .img {
+        box-sizing: border-box;
+        padding: 8px;
 
-.item {}
+        background-color: $gray;
+        border-radius: 8px;
+        margin-right: 30px;
+        img {
+          display: block;
+          width: 64px;
+          height: 64px;
+          object-fit: contain;
+        }
+      }
+      .text {
+        h3 {
+          margin: 0;
+          display: block;
+          font-size: 16px;
+          font-weight: 800;
+          line-height: 1.4;
+          color: $black;
+          margin-bottom: 10px;
+        }
+        p {
+          font-size: 12px;
+          font-weight: 400;
+          line-height: 1.4;
+          color: $gray2;
+          margin: 0;
+          display: block;
+        }
+      }
+    }
+  }
+}
+.invite-honest {
+  // .invite-honest__title
+  padding: 50px 0;
+  box-sizing: border-box;
 
-.num {}
+  &__title {
+    margin-bottom: 40px;
+  }
 
-.text {}
+  // .invite-honest__items
+
+  &__items {
+    display: flex;
+    margin: 0 -10px;
+    align-items: stretch;
+    .item {
+      padding: 50px 14px 20px;
+      box-sizing: border-box;
+      border: 1px solid #d6d2d2;
+      background-color: #fff;
+      border-radius: 8px;
+      width: calc(100% / 4 - 20px);
+      margin: 0 10px;
+      .title {
+        padding: 15px;
+        background-color: $gray;
+        display: flex;
+        align-items: center;
+        position: relative;
+        margin-bottom: 20px;
+        h2 {
+          margin: 0;
+          display: block;
+        }
+        svg {
+          display: block;
+          margin-right: 10px;
+          width: 20px;
+          height: 20px;
+        }
+      }
+      .subtitle {
+        position: absolute;
+        padding: 5px 10px;
+        background-color: $accent;
+        color: $white;
+        font-size: 12px;
+        font-weight: 400;
+        display: block;
+        width: fit-content;
+        top: -18px;
+        left: 0;
+        border-radius: 8px 8px 0 0;
+      }
+      .text {
+        a {
+          display: block;
+          width: fit-content;
+          color: $gray2;
+          text-decoration: none;
+          border-bottom: 1px dotted $gray2;
+          padding-bottom: 3px;
+        }
+        p {
+          font-weight: 400;
+          line-height: 1.4;
+          margin: 0;
+          display: block;
+          margin-bottom: 20px;
+        }
+        ul {
+          padding: 0;
+          margin: 0;
+          box-sizing: border-box;
+          list-style: none;
+          margin-bottom: 20px;
+          li {
+            padding-left: 15px;
+            position: relative;
+            &::before {
+              content: "";
+              position: absolute;
+              left: 0;
+              top: 50%;
+              width: 3px;
+              height: 3px;
+              background-color: $black;
+            }
+            font-size: 16px;
+            display: block;
+            color: $black;
+          }
+        }
+      }
+    }
+  }
+}
+
+.breaker {
+  // .breaker__wrap
+
+  &__wrap {
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    justify-content: center;
+    .text {
+      width: 100%;
+      box-sizing: border-box;
+      max-width: 555px;
+      margin-right: 40px;
+    }
+    .action {
+      a {
+        font-size: 16px;
+        color: $black;
+        border: 1px solid $accent;
+        border-radius: 8px;
+        box-sizing: border-box;
+        text-align: center;
+        display: block;
+        padding: 11px 20px;
+        text-decoration: none;
+      }
+    }
+  }
+}
+
+.faq {
+  // .faq__title
+  padding-top: 100px;
+  padding-bottom: 50px;
+  .container {
+    width: calc(100% - 30px);
+    max-width: 1264px;
+  }
+
+  .faq-subtitle {
+    display: block;
+    margin: 0;
+    box-sizing: border-box;
+    font-size: 22px;
+    color: $black;
+    font-weight: 600;
+    margin-bottom: 30px;
+  }
+  &__title {
+  }
+
+  // .faq__items
+
+  &__items {
+  }
+
+  // .faq__item
+
+  &__item {
+    padding-bottom: 20px;
+    border-bottom: 1px solid $gray2;
+    margin-bottom: 20px;
+    &.active {
+      border-color: $accent;
+      button {
+        color: $black;
+        &::after {
+          transform: rotate(45deg);
+          opacity: 0;
+        }
+      }
+      .faq__text {
+        max-height: max-content;
+        opacity: 1;
+        visibility: visible;
+        padding-top: 20px;
+      }
+    }
+    button {
+      width: 100%;
+      box-sizing: border-box;
+      padding: 5px 0;
+      background-color: transparent;
+      border: none;
+      color: $gray2;
+      cursor: pointer;
+      text-align: left;
+      position: relative;
+      &::before {
+        content: "";
+        position: absolute;
+        right: 0;
+        top: 50%;
+        width: 12px;
+        height: 1px;
+        background-color: $gray2;
+      }
+      &::after {
+        transition: 0.35s ease;
+        content: "";
+        position: absolute;
+        right: 0;
+        top: 50%;
+        width: 12px;
+        height: 1px;
+        background-color: $gray2;
+        transform: rotate(90deg);
+      }
+    }
+  }
+
+  // .faq__text
+
+  &__text {
+    max-height: 0;
+    opacity: 0;
+    transition: 0.35s ease;
+    visibility: hidden;
+    &.active {
+      padding: 20px 0;
+      max-height: max-content;
+      visibility: visible;
+    }
+    p {
+      margin: 0;
+      display: block;
+    }
+  }
+
+  // .faq__subtitle
+
+  &__subtitle {
+  }
+}
+
+.invite {
+  // .invite__bottom
+
+  &__bottom {
+    background-color: #fff;
+    box-sizing: border-box;
+    padding-top: 90px;
+    padding-bottom: 90px;
+  }
+}
+.container {
+}
+.invite-bottom {
+  // .invite-bottom__wrap
+
+  &__wrap {
+    display: flex;
+    align-items: center;
+  }
+
+  // .invite-bottom__text
+
+  &__text {
+    max-width: 564px;
+    width: 100%;
+    box-sizing: border-box;
+    margin-right: auto;
+    h2 {
+        color: $black;
+        font-weight: 600;
+        font-size: 22px;
+        display: block;
+        line-height: 1.4;
+        margin-bottom: 20px;
+    }
+    p {
+        display: block;
+        font-size: 16px;
+        line-height: 1.4;
+        box-sizing: border-box;
+        color: $black;
+    }
+    a {
+        display: block;
+        width: fit-content;
+        padding: 12px 50px;
+    }
+  }
+
+  // .invite-bottom__img
+
+  &__img {
+    max-width: 500px;
+    img {
+        display: block;
+        width: 100%;
+        box-sizing: border-box;
+        object-fit: contain;
+    }
+  }
+}
+.main-btn {
+}
