--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,6 +13,8 @@
 
 @import 'components/invite-page';
 
+@import 'components/referral-page';
+
 @import 'components/hero';
 
 @import 'components/footer';
