--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,7 +13,9 @@
 
 @import 'components/invite-page';
 
-@import 'components/referral-page';
+@import 'components/purch-page';
+
+@import 'components/ref-page';
 
 @import 'components/hero';
 
