--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -1589,8 +1590,7 @@ body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
-
-.container {
+.the-content-wrap .container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1714,7 +1714,7 @@ body {
   width: max-content;
 }
 
-.referral__tabs {
+.purch__tabs {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1726,7 +1726,7 @@ body {
           justify-content: space-between;
   margin-bottom: 30px;
 }
-.referral__tabs .btns {
+.purch__tabs .btns {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1734,7 +1734,7 @@ body {
       -ms-flex-align: stretch;
           align-items: stretch;
 }
-.referral__tabs .btns button {
+.purch__tabs .btns button {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   padding: 8px 20px;
@@ -1746,22 +1746,22 @@ body {
   background-color: transparent;
   cursor: pointer;
 }
-.referral__tabs .btns button:hover {
+.purch__tabs .btns button:hover {
   background-color: #dfdfdf;
 }
-.referral__tabs .btns button:first-child {
+.purch__tabs .btns button:first-child {
   border-radius: 8px 0 0 8px;
 }
-.referral__tabs .btns button:last-child {
+.purch__tabs .btns button:last-child {
   border-radius: 0 8px 8px 0;
 }
-.referral__tabs .btns button.active {
+.purch__tabs .btns button.active {
   background-color: #484134;
   color: white;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
-.referral__tabs .count {
+.purch__tabs .count {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1769,44 +1769,44 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
-.referral__tabs .count p {
+.purch__tabs .count p {
   font-size: 14px;
   color: #212121;
   margin: 0;
   display: block;
 }
-.referral__tabs .count p span {
+.purch__tabs .count p span {
   color: #A4A0A0;
   padding-left: 10px;
 }
-.referral__items-head {
+.purch__items-head {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin-bottom: 20px;
 }
-.referral__items-head .col {
+.purch__items-head .col {
   display: block;
   color: #212121;
   font-size: 14px;
   font-weight: 400;
 }
-.referral__items-head .col:nth-child(1) {
+.purch__items-head .col:nth-child(1) {
   width: 11%;
 }
-.referral__items-head .col:nth-child(2) {
+.purch__items-head .col:nth-child(2) {
   width: 11%;
 }
-.referral__items-head .col:nth-child(3) {
+.purch__items-head .col:nth-child(3) {
   width: 40%;
 }
-.referral__items-head .col:nth-child(4) {
+.purch__items-head .col:nth-child(4) {
   width: 34%;
 }
-.referral__items-head .col:nth-child(5) {
+.purch__items-head .col:nth-child(5) {
   width: 5%;
 }
-.referral__item {
+.purch__item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1815,47 +1815,47 @@ body {
   border-radius: 20px;
   margin-bottom: 20px;
 }
-.referral__item > div {
+.purch__item > div {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   padding-right: 10px;
 }
-.referral__item > div:last-child {
+.purch__item > div:last-child {
   padding-right: 0;
 }
-.referral__item:last-child {
+.purch__item:last-child {
   margin-bottom: 0;
 }
-.referral__item .date {
+.purch__item .date {
   font-size: 12px;
   color: #A4A0A0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   width: calc(11% - 10px);
 }
-.referral__item .order {
+.purch__item .order {
   width: 11%;
   font-size: 12px;
   color: #A4A0A0;
 }
-.referral__item .name {
+.purch__item .name {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   width: 40%;
 }
-.referral__item .name p {
+.purch__item .name p {
   margin: 0;
   display: block;
   color: #212121;
   font-size: 14px;
 }
-.referral__item .name .img {
+.purch__item .name .img {
   max-width: 60px;
   width: 100%;
   margin-right: 10px;
 }
-.referral__item .name .img img {
+.purch__item .name .img img {
   display: block;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -1864,22 +1864,22 @@ body {
   -o-object-fit: contain;
      object-fit: contain;
 }
-.referral__item .price {
+.purch__item .price {
   font-size: 14px;
   color: #A4A0A0;
   width: 5%;
 }
-.referral__item .actions {
+.purch__item .actions {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 10px;
   width: 34%;
 }
-.referral__item .actions .col:first-child {
+.purch__item .actions .col:first-child {
   margin-right: 40px;
 }
-.referral__item .actions a {
+.purch__item .actions a {
   font-size: 16px;
   text-decoration: none;
   display: block;
@@ -1889,20 +1889,475 @@ body {
   padding-bottom: 2px;
   margin-bottom: 10px;
 }
-.referral__item .actions a:last-child {
+.purch__item .actions a:last-child {
   margin-bottom: 0;
 }
-.referral__item .actions a.orange {
+.purch__item .actions a.orange {
   color: #FC7361;
   border-color: #FC7361;
 }
-.referral__item .actions a.black {
+.purch__item .actions a.black {
   color: #212121;
   border-color: #212121;
 }
-.referral__item .actions a.gray {
+.purch__item .actions a.gray {
   color: #A4A0A0;
   border-color: #A4A0A0;
+}
+
+.rp-top {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 30px 20px;
+  background-color: #fff;
+  border-radius: 20px;
+}
+.rp-top__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 40px;
+}
+.rp-top__title h2 {
+  display: block;
+  margin: 0;
+  margin-right: #212121;
+  font-weight: 600;
+  font-size: 22px;
+  margin-right: 20px;
+}
+.rp-top__title img {
+  display: block;
+  width: 26px;
+  height: 26px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.rp-top__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  gap: 40px;
+}
+.rp-top__balance {
+  width: 50%;
+}
+.rp-top__balance .balance-input {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+.rp-top__balance .balance-input span {
+  display: block;
+  font-weight: 400;
+  font-size: 14px;
+  color: #A4A0A0;
+  line-height: 1.4;
+}
+.rp-top__balance .balance-input__input {
+  margin-bottom: 20px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 15px;
+  border-radius: 8px;
+  background-color: #F9F9F9;
+}
+.rp-top__balance .balance-input__input span {
+  font-size: 16px;
+  color: #A4A0A0;
+}
+.rp-top__balance .actions {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  gap: 20px;
+}
+.rp-top__info {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  gap: 30px;
+}
+.rp-top__info .col:nth-child(1) p {
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #A4A0A0;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+.rp-top__info .col:nth-child(1) p span {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  white-space: nowrap;
+}
+.rp-top__info .col:nth-child(1) p b {
+  color: #212121;
+  margin-left: 5px;
+  white-space: nowrap;
+}
+.rp-top__info .col .progress span {
+  display: block;
+  font-size: 14px;
+  line-height: 1.4;
+  color: #A4A0A0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+.rp-top__info .col .progress .progress-item {
+  padding-top: 18px;
+  margin-top: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.rp-top__info .col .progress .progress-item i {
+  display: block;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: 12px;
+  background-color: #F9F9F9;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin-right: 6px;
+  position: relative;
+}
+.rp-top__info .col .progress .progress-item i:last-child {
+  margin-right: 0;
+}
+.rp-top__info .col .progress .progress-item i.active {
+  background-color: #FC7361;
+}
+.rp-top__info .col .progress .progress-item i.last::before {
+  content: "10%";
+  position: absolute;
+  left: 50%;
+  top: -19px;
+  width: 22px;
+  height: 18px;
+  background-color: #FC7361;
+  color: #fff;
+  border-radius: 5px 5px 5px 0;
+  font-size: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.rp-share {
+  margin-top: 30px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 40px;
+  background-color: #fff;
+  border-radius: 20px;
+}
+.rp-share__title {
+  margin-bottom: 40px;
+}
+.rp-share__title h2 {
+  font-weight: 600;
+  font-size: 22px;
+  margin: 0;
+  display: block;
+  margin-bottom: 14px;
+  color: #212121;
+}
+.rp-share__title p {
+  margin: 0;
+  display: block;
+  color: #212121;
+  font-size: 16px;
+  line-height: 1.4;
+}
+.rp-share__cols {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+.rp-share__cols .col {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  width: 50%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.rp-share__cols .col:first-child {
+  padding-right: 20px;
+  border-right: 1px solid #D6D2D2;
+}
+.rp-share__cols .col:last-child {
+  padding-left: 20px;
+}
+.rp-share__cols .col h3 {
+  display: block;
+  margin: 0;
+  margin-bottom: 20px;
+  font-size: 22px;
+  color: #212121;
+  font-weight: 600;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+.rp-share__cols .col ul {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  list-style: none;
+}
+.rp-share__cols .col ul li {
+  padding: 0;
+  margin: 0;
+  position: relative;
+  padding-left: 20px;
+}
+.rp-share__cols .col ul li::before {
+  content: "";
+  position: absolute;
+  left: 5px;
+  top: 10px;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: #FC7361;
+}
+.rp-share__cols .col ul li p {
+  font-size: 16px;
+  color: #212121;
+  line-height: 1.4;
+}
+.rp-share__cols .col ul li p span {
+  color: #FC7361;
+}
+.rp-share__cols .col a {
+  color: #A4A0A0;
+  font-weight: 400;
+  display: block;
+  padding-bottom: 2px;
+  border-bottom: 1px dotted #A4A0A0;
+  font-size: 14px;
+  text-decoration: none;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-top: auto;
+}
+.rp-share__action {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 40px;
+  gap: 40px;
+}
+.rp-share__action .link {
+  max-width: 530px;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+.rp-share__action .link span {
+  color: #A4A0A0;
+  font-size: 14px;
+  display: block;
+  margin-bottom: 2px;
+  line-height: 1.4;
+}
+.rp-share__action .link .link-item {
+  padding: 10px 40px 10px 20px;
+  position: relative;
+  background-color: #F9F9F9;
+  color: #212121;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  text-decoration: underline;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.rp-share__action .link .link-item::before {
+  content: "";
+  position: absolute;
+  right: 20px;
+  top: 10px;
+  width: 18px;
+  height: 18px;
+  background-image: url(../../assets/imgs/copy-icon.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.rp-share__action .socials ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.rp-share__action .socials ul li {
+  margin: 0;
+  padding: 0;
+  margin-right: 20px;
+}
+.rp-share__action .socials ul li:last-child {
+  margin-right: 0;
+}
+.rp-share__action .socials ul li img {
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.rp-table {
+  margin-top: 30px;
+}
+.rp-table__head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+.rp-table__empty {
+  padding: 90px 10px;
+  background-color: #fff;
+  border-radius: 20px;
+  margin-top: 20px;
+}
+.rp-table__empty p {
+  text-align: center;
+  font-size: 22px;
+  color: #212121;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.rp-table__head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: #f9f9f9;
+}
+
+.rp-table__head > div {
+  padding: 5px;
+  font-size: 14px;
+  color: #212121;
+  cursor: pointer;
+  position: relative;
+}
+.rp-table__head > div::after {
+  content: url(../../assets/imgs/icons/arrow.svg);
+  display: inline-block;
+  -webkit-transform: translateY(-2px);
+      -ms-transform: translateY(-2px);
+          transform: translateY(-2px);
+  margin-left: 5px;
+}
+.rp-table__head > div.down::after {
+  opacity: 1;
+  visibility: visible;
+  -webkit-transform: translateY(-2px);
+      -ms-transform: translateY(-2px);
+          transform: translateY(-2px);
+}
+.rp-table__head > div.up::after {
+  opacity: 1;
+  visibility: visible;
+  -webkit-transform: translateY(0) rotate(180deg);
+      -ms-transform: translateY(0) rotate(180deg);
+          transform: translateY(0) rotate(180deg);
+}
+
+.head-user {
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+  /* Самое длинное имя может быть тут */
+}
+
+.head-reff {
+  -webkit-box-flex: 1.5;
+      -ms-flex: 1.5;
+          flex: 1.5;
+}
+
+.head-type {
+  -webkit-box-flex: 1.5;
+      -ms-flex: 1.5;
+          flex: 1.5;
+}
+
+.head-status {
+  -webkit-box-flex: 1.2;
+      -ms-flex: 1.2;
+          flex: 1.2;
+}
+
+.head-promo {
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+}
+
+.head-comm {
+  -webkit-box-flex: 1.5;
+      -ms-flex: 1.5;
+          flex: 1.5;
 }
 
 .invite-hero {
