--- a/scss/components/_verification.scss
+++ b/scss/components/_verification.scss
@@ -12,7 +12,7 @@
             padding: 40px 40px;
             background-color: #fff;
             border-radius: 10px;
-            margin: 0 40px;
+            margin: 0 auto;
         }
 
         .col {
